<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rentezee.main.Login"
    tools:showIn="@layout/app_bar_login">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/ivFbLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/btn_fb_login" />

            <ImageView
                android:id="@+id/ivGoogleLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/btn_ggl_login" />

            <TextView
                style="@style/MyTextViewNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:text="@string/or"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/grey_rect_view_with_rounded_corners"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_mail" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/grey_rect_view_with_rounded_corners"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_password" />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </LinearLayout>


            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/log_in"
                android:theme="@style/MyButtonDark" />

            <TextView
                android:id="@+id/tvForgetPwd"
                style="@style/MyTextViewNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/forget_your_password"
                android:textColor="@android:color/holo_red_dark" />

            <LinearLayout
                android:id="@+id/layoutBottom"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/MyTextViewNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user" />

                <TextView
                    android:id="@+id/tvGoForSignUp"
                    style="@style/MyTextViewNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>
        </LinearLayout>

</ScrollView>
