<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBg"
    android:visibility="gone"
    tools:context="com.rentezee.main.Splash">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/viewPager"
            app:ci_drawable="@drawable/indicator_selected"
            app:ci_drawable_unselected="@drawable/indicator_unselected" />

        <TextView
            style="@style/MyTextViewNormal"
            android:padding="10dp"
            android:id="@+id/tvSkipLogin"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/skip_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/layoutBottom"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/black"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:theme="@style/MyTextViewNormal" />

                <TextView
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/log_in"
                    android:textColor="@android:color/white"
                    android:theme="@style/MyTextViewNormal" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>